--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
 	<title>Svelte app</title>
+	<img id="icon" src="./build/favicon.png" />
 	<link rel='stylesheet' href='./global.css'>
-	<link rel='stylesheet' href='./bundle.css'>
+	<link rel='stylesheet' href='./build/bundle.css'>
 	<script src="//www.gstatic.com/cv/js/sender/v1/cast_sender.js?loadCastFramework=1"></script>
-	<script defer src='./bundle.js'></script>
+	<script defer src='./build/bundle.js'></script>
 </head>
 
 <body>
